<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        android:id="@+id/home_img_top"
        android:src="@drawable/cpp_home_ic"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/abt_cpp"
        android:layout_below="@+id/home_img_top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/home_text"
        android:textColor="#000000"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/text_pt2"
        android:layout_below="@id/abt_cpp"
        android:layout_marginBottom="5dp"
        android:text="@string/home_text_pt2"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/text_pt3"
        android:layout_below="@id/text_pt2"
        android:layout_marginBottom="5dp"
        android:text="@string/home_text_pt3"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/text_pt4"
        android:layout_below="@id/text_pt3"
        android:layout_marginBottom="5dp"
        android:text="@string/home_text_pt4"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:id="@+id/heading_use"
        android:layout_below="@id/text_pt4"
        android:text="USES OF C++"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/heading_use"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:entries="@array/list" />




</RelativeLayout>

</ScrollView>